# Grupo2

./: README.md
Projetos/Projeto3/: cmd_config.rs
Projetos/Projeto3/cmd_soap/: CCMovelDigitalSignature.wsdl  Cargo.toml  build.rs
Projetos/Projeto3/cmd_soap/src/: cmd_soap_msg.rs  main.rs
TPraticas/Aula11/: valida.py
TPraticas/Aula2/: Relatorio_TP2pdf
TPraticas/Aula3/execercicio1/: blindSignature-app.py  desofusca-app.py  init-app.py  key.crt  key.pem  ofusca-app.py  verify-app.py
TPraticas/Aula5/koreCoin/: main.experiencia1.1.js
TPraticas/Aula8/P1.5_P.16/: badfile.txt  heap.c  stack.c
