[package]
name = "cmd_soap"
version = "0.1.0"
authors = ["mata <pmmatarodrigues@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
savon = "0.2.0"
soap = "0.0.1"
yaserde_derive = "0.3"
yaserde = "0.3"
xml-rs = "0.8.0"
log = "0.4"
hyper = "0.10.10"
byte_array = "0.1.1"


[dependencies]
savon = "0.2.0"
soap = "0.0.1"
syn = "1.0"
yaserde_derive = "0.3"
yaserde = "0.3"
xml-rs = "0.8.0"
log = "0.4"
hyper = "0.10.10"
byte_array = "0.1.1"